--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,17 +158,20 @@ h1, p {
     border-radius: 10px;
   }
   .navbar-nav {
-    margin-left: 420px; /* Adjust the margin as needed */
   }
   #form-control{
     border:2px solid rgb(218, 208, 208);
     }
     .glassmorphism {
-      background: rgba(255, 255, 255, 0.356); /* Adjust transparency as needed */
+      background: rgba(255, 255, 255, 0.747); /* Adjust transparency as needed */
       backdrop-filter: blur(10px); /* Adjust blur amount as needed */
       border-radius: 10px;
       padding: 20px;
       margin: 10px;
+      min-width:200px;
+      min-height:200px;
+      text-align: center;
+      
   }
   .glassmorphism p{
     color: black
@@ -208,4 +211,11 @@ h1, p {
 }
 .update{
   background-color: #facde3;
+}
+.card-title{
+  color:#d63384;
+
+}
+.card-x{
+
 }
